@@ -91,7 +91,7 @@ public class WebResponse {
 
     private boolean inRange(String range,Integer val) {
         String[] boundries = range.split("-");
-        if (val < new Integer(boundries[0]) || val > new Integer(boundries[1])) {
+        if (val < Integer.valueOf(boundries[0]) || val > Integer.valueOf(boundries[1])) {
             return false;
         } else {
             return true;
