@@ -55,9 +55,9 @@ import org.apache.http.protocol.HttpContext;
 import org.apache.http.util.EntityUtils;
 import org.opennms.core.utils.InetAddressUtils;
 import org.opennms.core.utils.ParameterMap;
-import org.opennms.netmgt.model.PollStatus;
 import org.opennms.netmgt.poller.Distributable;
 import org.opennms.netmgt.poller.MonitoredService;
+import org.opennms.netmgt.poller.PollStatus;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -206,7 +206,7 @@ public class WebMonitor extends AbstractServiceMonitor {
 
     private boolean inRange(String range,Integer val){
         String[] boundries = range.split("-");
-        if(val < new Integer(boundries[0]) || val > new Integer(boundries[1]))
+        if(val < Integer.valueOf(boundries[0]) || val > Integer.valueOf(boundries[1]))
             return false;
         else
             return true;
