@@ -48,6 +48,7 @@ import javax.ws.rs.core.UriInfo;
 
 import org.joda.time.format.DateTimeFormatter;
 import org.joda.time.format.ISODateTimeFormat;
+import org.opennms.core.criteria.Alias.JoinType;
 import org.opennms.core.criteria.CriteriaBuilder;
 import org.opennms.netmgt.dao.api.EventDao;
 import org.opennms.netmgt.model.OnmsEvent;
@@ -95,7 +96,7 @@ public class EventRestService extends OnmsRestService {
     public OnmsEvent getEvent(@PathParam("eventId") final String eventId) {
         readLock();
         try {
-            return m_eventDao.get(new Integer(eventId));
+            return m_eventDao.get(Integer.valueOf(eventId));
         } finally {
             readUnlock();
         }
@@ -123,7 +124,7 @@ public class EventRestService extends OnmsRestService {
      * Returns all the events which match the filter/query in the query
      * parameters
      * 
-     * @return Collection of OnmsEvents (ready to be XML-ified)
+     * @return Collection of OnmsEventCollection (ready to be XML-ified)
      * @throws java.text.ParseException
      *             if any.
      */
@@ -134,8 +135,7 @@ public class EventRestService extends OnmsRestService {
         readLock();
 
         try {
-            final CriteriaBuilder builder = new CriteriaBuilder(OnmsEvent.class);
-            applyQueryFilters(m_uriInfo.getQueryParameters(), builder);
+            final CriteriaBuilder builder = getCriteriaBuilder(m_uriInfo.getQueryParameters());
             builder.orderBy("eventTime").asc();
 
             final OnmsEventCollection coll = new OnmsEventCollection(m_eventDao.findMatching(builder.toCriteria()));
@@ -151,7 +151,7 @@ public class EventRestService extends OnmsRestService {
      * Returns all the events which match the filter/query in the query
      * parameters
      * 
-     * @return Collection of OnmsEvents (ready to be XML-ified)
+     * @return Collection of OnmsEventCollection (ready to be XML-ified)
      * @throws java.text.ParseException
      *             if any.
      */
@@ -163,7 +163,6 @@ public class EventRestService extends OnmsRestService {
         readLock();
 
         try {
-            final CriteriaBuilder builder = new CriteriaBuilder(OnmsEvent.class);
             final MultivaluedMap<String, String> params = m_uriInfo.getQueryParameters();
 
             final String column;
@@ -196,7 +195,7 @@ public class EventRestService extends OnmsRestService {
                 end = new Date();
             }
 
-            applyQueryFilters(params, builder);
+            final CriteriaBuilder builder = getCriteriaBuilder(params);
             builder.match("all");
             try {
                 builder.between(column, begin, end);
@@ -231,7 +230,7 @@ public class EventRestService extends OnmsRestService {
         writeLock();
 
         try {
-            final OnmsEvent event = m_eventDao.get(new Integer(eventId));
+            final OnmsEvent event = m_eventDao.get(Integer.valueOf(eventId));
             if (ack == null) {
                 throw new IllegalArgumentException("Must supply the 'ack' parameter, set to either 'true' or 'false'");
             }
@@ -263,8 +262,7 @@ public class EventRestService extends OnmsRestService {
                 formProperties.remove("ack");
             }
 
-            final CriteriaBuilder builder = new CriteriaBuilder(OnmsEvent.class);
-            applyQueryFilters(formProperties, builder);
+            final CriteriaBuilder builder = getCriteriaBuilder(formProperties);
             builder.orderBy("eventTime").desc();
 
             for (final OnmsEvent event : m_eventDao.findMatching(builder.toCriteria())) {
@@ -286,4 +284,16 @@ public class EventRestService extends OnmsRestService {
         }
         m_eventDao.save(event);
     }
+
+    private CriteriaBuilder getCriteriaBuilder(final MultivaluedMap<String, String> params) {
+        final CriteriaBuilder builder = new CriteriaBuilder(OnmsEvent.class);
+        builder.alias("node", "node", JoinType.LEFT_JOIN);
+        builder.alias("node.snmpInterfaces", "snmpInterface", JoinType.LEFT_JOIN);
+        builder.alias("node.ipInterfaces", "ipInterface", JoinType.LEFT_JOIN);
+        builder.alias("serviceType", "serviceType", JoinType.LEFT_JOIN);
+
+        applyQueryFilters(params, builder);
+        return builder;
+    }
+
 }
